--- a/pinocho.css
+++ b/pinocho.css
@@ -1,1 +1,14 @@
-
+h1{
+        color:rgb(112, 115, 21);
+    }
+        .pinpon{
+            
+            background-color:rgb(207, 207, 207);
+        }
+        .jaja{
+            background-color:rgb(235, 230, 235);
+        }
+        .jiji{
+            background-color:rgb(235, 230, 235);
+        
+        }
