--- a/pinocho.css
+++ b/pinocho.css
@@ -1,7 +1,7 @@
 h1{
         color:rgb(112, 115, 21);
     }
-        .pinpon{
+.pinpon{
             
             background-color:rgb(207, 207, 207);
         }
@@ -12,3 +12,6 @@ h1{
             background-color:rgb(235, 230, 235);
         
         }
+body{
+text-align:right;
+background-color:rgb(240,220,240);}
